--- a/config/database.yml
+++ b/config/database.yml
@@ -5,11 +5,7 @@
 #   gem "sqlite3"
 #
 default: &default
-<<<<<<< HEAD
   adapter: sqlite3
-=======
-  adapter: mysql2
->>>>>>> origin/main
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
@@ -24,24 +20,11 @@ test:
   <<: *default
   database: db/test.sqlite3
 
-<<<<<<< HEAD
 production:
   adapter: mysql2
   encoding: utf8
   pool: 5
   database: libeu_app_production
-  username: libeu
+  username: root
   password: Kou4657422w2YbCH2-
-=======
-
-production:
-  <<: *default
-  database: db/production.sqlite3
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-  charset: utf8mb4
-  username: ec2-user
-  password: <%= ENV['DATABASE_PASSWORD'] %>
->>>>>>> origin/main
   socket: /var/lib/mysql/mysql.sock
